--- a/app/stylesheets/components.scss
+++ b/app/stylesheets/components.scss
@@ -26,11 +26,6 @@
     width: 20rem;
     height: 20rem;
     margin: 1.5rem;
-
-    &:hover {
-      transform: none;
-      border: 2px solid var(--color-font);
-    }
   }
 
   @media only screen and (max-width: 450px) {
@@ -43,6 +38,11 @@
     transform: translateY(-2px);
     border: 2px solid var(--color-primary);
     cursor: pointer;
+
+    @media only screen and (max-width: 1000px) {
+      transform: none;
+      borer: 2px solid var(--color-font);
+    }
   }
 }
 
